# NCT-Blocker

./: .env.prod  Dockerfile  README.md  fast_api_middleware.py  pyproject.toml  requirements-tests.txt  requirements.txt
app/: __main__.py  settings.py
app/core/: __init__.py
app/core/debug/: classes.py
app/core/fast_decorators/: cashe_decor.py
app/core/fast_routers/: __init__.py  status_router.py
app/core/redis_client/: __init__.py  base.py  dependency.py  exceptions.py
app/core/requests_makers/: asyncio.py  exceptions.py
app/core/sql_repository/: database.py  exeptions.py  model.py
app/database/: database.py
app/database/models/: __init__.py  ban.py
app/database/repo/: bans.py
app/depends/: __init__.py  db.py
app/routers/v1/: __init__.py
app/routers/v1/bans/: models.py  router.py
core/: pyproject.toml
core/core/: spec_time.py
core/core/fast_decorators/: __init__.py  cashe_decor.py  rate_limiter.py
core/core/fast_depends/: __init__.py
core/core/redis_client/: base.py
core/core/sql_repository/: __init__.py  classes.py  exeptions.py  model.py
src/: __main__.py
src/database/: __init__.py  database.py
src/database/models/: ban.py
src/database/repo/: __init__.py  bans.py
src/debug/: classes.py
src/depends/: db.py
src/routers/v1/: __init__.py
src/routers/v1/bans/: models.py  router.py
src/routers/v1/utils/: router.py
tests/: __init__.py  conftest.py
tests/tests_api/: test_bans.py  test_delete.py  test_in_ban.py  test_post_ban.py
tests/tests_db/: test_bans.py
