[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "core"
version = "0.1.0"
description = "Microservice core packages all in one"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "redis>=7.1.0",
    "sqlalchemy>=2.0.46",
    "pydantic",
    "fastapi",
    "uvicorn>=0.40.0",
    "httpx>=0.28.1",
    "aiohttp>=3.13.3",
    "psutil>=7.2.2",
]
[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "aiosqlite",
]


[tool.setuptools]
packages = ["core"]

# Исключение файлов
exclude-package-data = {"*" = ["*.txt", "tests/*"]}
